# push_swag

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  local_history.patch  push_swap
includes/: push_swap.h  push_swap.h.gch
src/: algo.c  arrange_big_stack.c  arrange_small_stack.c  free.c  main.c  move_pa_pb.c  move_ra_rb.c  move_rra_rrb.c  move_sa_sb.c  my_atoi.c  push_swap.c  quick_sort.c  redo_algo.c  stack_a_is_sorted.c  utils1.c  utils2.c
src/LIBFT/ft_libft/: Makefile  ft_lstsize_bonus.c  libft.h
src/LIBFT/get_next_line/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/LIBFT/libftprintf/: Makefile
trash/: test2.c  tester_quickSort.c
